# doc-qa

./: .env.example  .gitignore  Dockerfile  README.md  config.py  lab1_first_calls.py  main.py  pyproject.toml  run_prod.sh
.github/workflows/: ci.yml  deploy.yml
docs/: README.md  cicd_pipeline.html  week1_architecture.html  week2_architecture.html  week3_architecture.html  week3_journal_entry.docx  week4_architecture.html  week4_journal_entry.docx  week5_architecture.html  week5_journal_entry.docx
lab2/: harness_viewer.html
lab2/results/: run_20260322T133928Z.jsonl  run_20260322T134942Z.jsonl  run_20260322T182618Z.jsonl  run_20260322T183834Z.jsonl
lab2_test_harness/: harness.py  inputs.py  run.py  variants.py
lab3/: chatbot.py  message_history.py  summarizer.py  test_summarizer.py  test_week3_step1.py  test_week3_step2.py  test_week3_step3.py  token_tracker.py
lab4/: chatbot.py  test_tools.py
lab4/data/docs/: api_authentication.txt  billing_and_payments.txt  custom_domains.txt  data_export.txt  data_privacy.txt  getting_started.txt  integrations.txt  keyboard_shortcuts.txt  mobile_app.txt  notifications.txt  password_reset.txt  refund_policy.txt  search_features.txt  storage_and_limits.txt  support_channels.txt  team_management.txt  two_factor_auth.txt  uptime_and_sla.txt  version_history.txt  webhooks.txt
lab4/rag/: embedder.py  loader.py  retriever.py  store.py
lab4/tools/: registry.py  reminder.py  weather.py
lab5/: jest.config.js  package-lock.json  package.json  tailwind.config.ts
lab5/src/app/: layout.tsx  page.tsx
tests/: test_config.py
(+8 files in other folders)
