[project]
name = "doc-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "google-cloud-firestore>=2.25.0",
    "google-cloud-secret-manager>=2.26.0",
    "openai>=2.29.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "eval: marks tests as eval tests (calls LLM APIs)",
]